# tMLAPIs

./: .gitignore  CHANGES.md  Cargo.toml  Dockerfile  README.md  author.html  authorScraper.go  author_script.js  compose.yaml  go.mod  go.sum  index.html  index.js  list.html  list_script.js  main.go  package-lock.json  package.json  scrapy.go
.github/workflows/: build-and-release.yml  build.yml  rust.yml
.sqlx/: query-0063873868be4d57a3f4e8d93437d7be0d78546763d0a144dfa586aadd192e6f.json  query-2677052cb69de37ce8b6411806f84d96df8abf2b7f28d5cd1804fe7cef0e1b5d.json  query-2b287938c2ed3c1dc33d34c364f6f45c3db841abed3e04c32ad2ed2a0a03d844.json  query-4b8ec52d9fc63010add2fb6e5345e2fb6c77deb8f47c4a9e91802397e9e2bc72.json  query-4da37e5540a86eb62634d29c4c017f34694c14d0ed1ee11061825c20a5d0acfb.json  query-51fabb084b4b36047dae2ad3b9c05b2303d11b9a7fcbbcd1d12234fcb6f7095e.json  query-5e1b23a3e037dd836be2d616a5129cf0d205298601acf456edfecc2178558bed.json  query-72ed4c84bd71d07dc1f0db90c45ff96481b8aa44f54f806712ed3a1fbe2c84f2.json  query-7b59d33fc948ef4e031adc20f772e758e9338b954e488c54e0a252575ae3e5b8.json  query-979af781b2f6a61c826ae1c31eecdc57d4eb6f0840f1e51ba70921ec97dbb193.json  query-986b9c3c028ee9eb0f34cd3ea86a04b3c075c2b08cc1a507078b2627ff35f3e6.json  query-a9d3640ac7ebe78297fd7d28bf91874eb2275db1088affc7440aa09625f9f84e.json  query-ad150437051c2226e20afb85a8979054326474a30a77d8fb79d2e93b98bd7c14.json  query-b2f376b7a9c5f753286cb94b7459d6d78a9d3cb6c35a4dc2815243a19bdaf948.json  query-d7d28f05ab08265ce312ae65ac50c7df7610677340c5f67535fed276103e786a.json  query-daabd7e30c6b9719a781babef82819f4fb48745a419c45c84e2f3193b6229a5a.json  query-df11e3d69a856a65124e07ca84b07a02ad2c7e3391db16bf2787fa81db3d09e2.json  query-e159cb5b6ed7b8604e3d572f10bd4ddc5572be6b78b3bda0b2254b666c1f5ea8.json  query-e83a1148777ad83d16e380d5d1c3c1d6a35069034d8a8eb907c9a14e1ed15ec7.json  query-ebced8dc05bdc89ea43da7eaf63769be755a0df762fd9ebc7cb690a9ad74dfc8.json  query-eee296966de853df82cf638c4d18135c09090a97ca5e36c82dd56b82f2f5bcb1.json  query-f72cdda7484fc0f9bbfa5b76ee821e335c0e67ff27eb6c873dd3237ea59f106e.json
migrations/: 20260120165637_init_schema.sql  20260124192549_create_mod_list.down.sql  20260124192549_create_mod_list.up.sql  20260124200000_change_id_types.down.sql  20260124200000_change_id_types.up.sql
src/: api13.rs  api14.rs  api_error.rs  cache.rs  db.rs  main.rs  steamapi.rs
src/api13/: api.rs  mod.rs  responses.rs
src/api14/: api.rs  author_api.rs  db.rs  history_api.rs  list_api.rs  mod.rs  mod_api.rs  responses.rs
