[package]
name = "tmlapis"
version = "7.0.4"
edition = "2024"
authors = ["NotLe0n"]
description = "a series of tmodloader apis to help make dynamic websites and tools"
readme = "README.md"
repository = "https://github.com/NotLe0n/tMLAPIs"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11.11", features = ["json"] }
scraper = "0.18.1"
rocket-cache-response = "0.6.2"
urlencoding = "2.1.2"
log = "0.4"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
